--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,12 +1,61 @@
 
 
-
+* {
+    box-sizing: border-box;
+}
 
 .App {
-
+     min-width: 100%;
+     height: 960px;
+     margin: 0;
 }
 
 
 .Main {
+    display: inline-grid;
+    grid-template: 140px 80px 760px / repeat(2, 50%);
+    grid-template-areas:    'title title' 
+                        'searchbar searchbar'
+                          'result playlist';
+    border: 2px solid black;
+    min-width: 100%;
+    background-color: #3b0054;
+    color: silver;
+}
+
+.header {
+    grid-area: title;
+    border-bottom: 2px solid black;
+    min-width: 100%;
+    height: 140px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 15px;
+    font-size: 56px;
+    position: relative;
+    bottom: 42px;
+    letter-spacing: 3px;
+    font-family: "Margarine", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    background-color: silver;
+    color: black;
+}
+
+.header span {
+    color: cyan;
     
+}
+
+.searchbar {
+    grid-area: searchbar;
+}
+
+.searchResults {
+    grid-area: result;
+}   
+
+.playlist {
+    grid-area: playlist;
 }
